plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
}

group = 'org.opentele.consult'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '15'

repositories {
    mavenCentral()
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
}

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

task migrateTestDb() {
    dependsOn ":core:migrateTestDb"
}

task migrateDb() {
    dependsOn ":core:migrateDb"
}

dependencies {
    implementation project(':core')
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-quartz'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.bugsnag:bugsnag-spring:3.+'

    compile group: 'org.json', name: 'json', version: '20201115'
    compile "log4j:log4j:1.2.16"
    compile "commons-io:commons-io:2.4"
    compile "commons-lang:commons-lang:2.6"

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-test'

    compile('org.thymeleaf:thymeleaf:3.0.14.RELEASE')
}

sourceSets {
    main {
        resources {
            srcDir '../core/src/main/resources'
        }
    }
    test {
        resources {
            srcDir '../core/src/main/resources'
        }
    }
}

task unitTest( type: Test ) {
    useJUnitPlatform()
    exclude ("**/**ExternalTest.class")
}

test {
    useJUnitPlatform()
    include ("**/**ExternalTest.class")
}
